Remove booking bg image due to contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,24 +118,6 @@ img {
   color: var(--tertiary-color) !important;
 }
 
-/*Booking form*/
-.booking-container {
-  background-image: url("../images/booking.webp");
-  filter: brightness(0.9);
-  background-size: cover;
-  background-position: center;
-  padding: 5rem;
-  display: flex;
-  justify-content: center;
-}
-
-.booking-title {
-  font-size: 2rem;
-  font-weight: 700;
-  text-align: start;
-  margin: 5%;
-}
-
 .form-control,
 .form-select {
   width: 75%;
